fix: fix layout issue

--- a/src/components/BoardBar/BoardBar.scss
+++ b/src/components/BoardBar/BoardBar.scss
@@ -49,6 +49,8 @@
     .board-name {
       padding: 0px;
       background-color: $board-bg-color;
+      align-self: center;
+      white-space: nowrap;
       input {
         color: #fff;
         &:focus {
@@ -68,9 +70,16 @@
 
     .only-icon {
       padding: 0;
+
       svg {
         height: auto;
         width: 21px;
+      }
+      background-color: lighten($board-bg-color, 5%);
+
+      &:hover {
+        color: #f0d502;
+        box-shadow: none;
       }
     }
 
@@ -82,6 +91,18 @@
       border-left: 1px solid #ffffff3d;
       height: 16px;
       margin: 8px;
+    }
+
+    .user-avatar {
+      margin: 0px 8px 0px 0px;
+      width: 32px;
+      height: 32px;
+      border-radius: 25em;
+      cursor: pointer;
+      opacity: 1;
+      &:hover {
+        opacity: 0.7;
+      }
     }
   }
 }
